# Aetos

./: .gitignore  LICENSE  README.md  aetos_raspberry_Pi.py  data.json
.devcontainer/: devcontainer.json
Assembly/: Instruction  Pulley
Controller_test/: controller_game.py  joystick_test.py
aetos_micro/: platformio.ini
aetos_micro/include/: FIT0186.hpp  Joint.hpp  PID.hpp  QuadratureEncoder.hpp  Serialnterface.hpp  TalonSrx.hpp  chrono.hpp  config.hpp  encoder.hpp  joint.hpp  moving_average.hpp  quadratureEncoder.hpp  talon_srx.hpp  timer.hpp
aetos_micro/include/src/: chrono.cpp  moving_average.cpp  timer.cpp
aetos_micro/src/: main.cpp
doc/: electrical_assembly.md  mecanical_assembly.md  setup.md  usage.md
doc/.obsidian/: workspace.json
doc/Electrical/: electrical_assembly.md
doc/Electrical/.obsidian/: workspace.json
doc/Mechanical/: mecanical_assembly.md
doc/Mechanical/Assembly/ reinforcement/: reinforcement
doc/Mechanical/Assembly/Electrical_box/: Box - Box.stl  Box- Door.stl  Electrical_box
doc/Mechanical/Assembly/Pulley/: Pulley - Bas centre hinge.stl  Pulley - Pin poulie 2.stl  Pulley - Poulie.stl  Pulley_assembly_instruction
doc/Mechanical/Assembly/Winch/: Winch_instructions
doc/Mechanical/Assembly/Winch/STL/: Winch - Casing cover.stl  Winch - Motor Casing.stl  Winch - Winch.stl  Winch - motor support(4).stl
doc/Mechanical/STEP/Frame/: Frame - Triangle1.step  Frame - Triangle2.step
doc/Mechanical/STEP/Homing/: Frame - Homing2.step  Frame - Homing3.step
doc/Mechanical/STL/Frame/: Frame - Top_Frame1.stl  Frame - Top_Frame2.stl  Frame - Top_middle1.stl  Frame - Top_middle2.stl
doc/Mechanical/STL/Homing/: Frame - Homing1.stl
doc/Mechanical/STL/Payload/: Payload - Attachment.stl  Payload - Body.stl  Payload - pi_camera.stl
doc/Mechanical/STL/Pulley/: Pulley - Hinge.stl  Pulley - Pulley support.stl  Pulley - Top hinge.stl
doc/Mechanical/STL/Winch/: Winch - Motor Support (1).stl  Winch - Motor support(2).stl  Winch - Motor support(3).stl
doc/Software/: esp32-platformio-setup.md  setup.md  usage.md
doc/Software/Files/: Old_aetos_pi.py  aetos_pi.py
doc/files/: aetos_pi.py
docker/: Dockerfile
ros2_ws/src/: ROS2_Architecture.drawio  architecture.drawio  data.json
ros2_ws/src/aetos_auxiliary/: CMakeLists.txt  package.xml
ros2_ws/src/aetos_auxiliary/launch/: aetos.launch.py  auxiliary.launch.py
ros2_ws/src/aetos_auxiliary/src/: arbitration.cpp  serial_com.cpp  test_publisher.cpp
ros2_ws/src/aetos_cam/: package.xml  setup.cfg  setup.py
ros2_ws/src/aetos_cam/aetos_cam/: camera.py  serveur.py
ros2_ws/src/aetos_cam/launch/: cam.launch.py
ros2_ws/src/aetos_gui/: package.xml  setup.cfg  setup.py
ros2_ws/src/aetos_gui/aetos_gui/: main.py  ui_node.py
ros2_ws/src/aetos_gui/launch/: gui.launch.py
ros2_ws/src/aetos_gui/resource/: main_window.ui
ros2_ws/src/aetos_gui/ui/: main_window.ui
ros2_ws/src/aetos_joy/: package.xml  setup.cfg  setup.py
ros2_ws/src/aetos_joy/aetos_joy/: joy_demux.py  velocity_subscriber.py
ros2_ws/src/aetos_joy/launch/: joy.launch.py
ros2_ws/src/aetos_kinematic/: CMakeLists.txt  package.xml
ros2_ws/src/aetos_kinematic/include/: position_pid.hpp
ros2_ws/src/aetos_kinematic/launch/: kinematics.launch.py
ros2_ws/src/aetos_kinematic/src/: velocity_conversion.cpp
ros2_ws/src/aetos_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/aetos_msgs/msg/: EffectorPosition.msg  EncoderArbitration.msg  EncoderValues.msg  MotorVelocity.msg  Velocity.msg
ros2_ws/src/aetos_msgs/srv/: EncoderArbitration.srv  VelocityArbitration.srv
ros2_ws/src/aetos_simulation/: package.xml  setup.cfg  setup.py
ros2_ws/src/aetos_simulation/aetos_simulation/: publisher.py  sim.py  simulation.py  subscriber.py  test.py  test_simulation.py
ros2_ws/src/aetos_simulation/launch/: sim.launch.py
ros2_ws/src/cpp_calcul_moteur/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_calcul_moteur/src/: publisher_member_function.cpp  subscriber_member_function.cpp
ros2_ws/src/joy_demux/: package.xml  setup.cfg  setup.py
ros2_ws/src/simulation_python/: package.xml  setup.cfg  setup.py
ros2_ws/src/simulation_python/simulation_python/: simulation_python.py
ros2_ws/src/test_pkg/: package.xml
ros2_ws/src/vision/: CMakeLists.txt  package.xml
ros2_ws/src/websocket_listener/: package.xml  setup.cfg  setup.py
ros2_ws/src/websocket_listener/websocket_listener/: listener.py
