<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<<<<<<<< HEAD:ros2_ws/src/aetos_msgs/package.xml
  <name>aetos_msgs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nathan.dumoulin11@outlook.com">Aetos</maintainer>
  <license>Apache-2.0</license>
========
  <name>aetos_joy</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="papn1801@usherbrooke.ca">nikopapi</maintainer>
  <license>TODO: License declaration</license>
>>>>>>>> 50ffe75654079253b972d4761d25fb499e19257d:ros2_ws/src/aetos_joy/package.xml

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>