<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<<<<<<<< HEAD:ros2_ws/src/aetos_simulation/package.xml
  <name>aetos_simulation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="papn1801@usherbrooke.ca">nikopapi</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
========
  <name>cpp_calcul_moteur</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="boum3864@USherbrooke.ca">Aetos</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
>>>>>>>> origin/dev/velocity_calculation_ELB:ros2_ws/src/cpp_calcul_moteur/package.xml

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
